# temporal-otlp

./: .env  .env_dev  .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  agent.yaml  build.sh  build_prod.sh  cluster.config  cortex.yaml  docker-compose.base.yml  docker-compose.logs.yml  docker-compose.metricagents.yml  docker-compose.metrics.yml  docker-compose.mimirtest.yml  docker-compose.services-dev.yml  docker-compose.services.yml  docker-compose.temporal.yml  docker-compose.tracing.yml  docker-compose.yml  promtail-config.yaml  pyproject.toml  run_workers.py  starter.py  tempo.yaml
apm_cluster/: cluster.config  docker-compose.agents.yml  docker-compose.alertmanager.yml  docker-compose.grafana.yml  docker-compose.lb.yml  docker-compose.locals3.yml  docker-compose.logs.yml  docker-compose.metaagents.yml  docker-compose.metrics.yml  docker-compose.oncall.yml  docker-compose.services-prod.yml  docker-compose.temporal.yml  docker-compose.tracing.yml
apm_cluster/development/: .env_prod  Dockerfile.base  build.sh  docker-compose.agents.yml  docker-compose.services-dev.yml  docker-compose.services-prod.yml  docker-compose.temporal.yml  pyproject.toml  starter.py  starter_prod.py  temporal.config
apm_cluster/development/config/: otelcollector-dev.yaml  prometheus-dp-prod.yaml
apm_cluster/development/src/service_A/: env.py  worker.py
apm_cluster/development/src/service_B/: env.py  separate_run.py
apm_cluster/development/src/service_C/: env.py
apm_cluster/development/src/service_D/: worker.py
apm_cluster/development/src/service_F/: env.py
(+70 files in other folders)
